adding additional properties to Submitter and completing the implementation for create Submission array

--- a/composer.json
+++ b/composer.json
@@ -60,13 +60,12 @@
             "@composer run build",
             "@php vendor/bin/testbench serve"
         ],
-        "analyse": "vendor/bin/phpstan analyse",
         "test": "vendor/bin/pest",
         "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/pint",
         "lint": [
             "shift-cli",
-            "pint"
+            "pint",
+            "vendor/bin/phpstan analyse"
         ]
     },
     "config": {
